Pager layout on purchases list

--- a/PurchasesRegistry/PurchasesRegistry/PurchasesRegistry.csproj
+++ b/PurchasesRegistry/PurchasesRegistry/PurchasesRegistry.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.2.1" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.5" PrivateAssets="All" />
+    <PackageReference Include="PagedList.Core.Mvc" Version="1.2.0" />
   </ItemGroup>
 
   <ItemGroup>
